fix alignment

--- a/frontend/src/assets/css/Store.css
+++ b/frontend/src/assets/css/Store.css
@@ -4163,6 +4163,10 @@ ol {
   margin-right: 10px;
 }
 
+.not-found {
+  margin-top: -200px;
+}
+
 /*======================================
     Qauntity CSS
 ========================================*/
